5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_1275.log
== TEST (2019-06-24 19:28:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Numero: ")))
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:33:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat1 = array(eval(input("Numero: ")))
mat = shape(mat1)[1]

for i in range(mat):
	

print(mat)
-- ERROR:
File "XXXX", line 10
    print(mat)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:34:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat1 = array(eval(input("Numero: ")))
mat = shape(mat1)[1]


	

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:34:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat1 = array(eval(input("Numero: ")))
mat = shape(mat1)[1]


	

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:37:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat1 = array(eval(input("Numero: ")))
mat = shape(mat1)[1]
x = 0
for j in range(mat):
	x = x + mat[4,j]

	

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:13:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat1 = array(eval(input("Numero: ")))
mat = shape(mat1)[1]
x = 0
for j in range(mat):
	x = x + mat[4,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:14:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = mat.shape
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:15:25) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= int(input("Digite um numero: "))
mat = zeros((n,n), dtype = int)
x = mat.shape
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:17:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas = array([[ 3, 12 ,1 ], [12 , 0 , 2 ], [0 , 2 , 3 ]])

n= int(input("Digite um numero: "))
mat = zeros((n,n), dtype = int)
x = frutas.shape
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:17:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

frutas = array([[ 3, 12 ,1 ], [12 , 0 , 2 ], [0 , 2 , 3 ]])

n= int(input("Digite um numero: "))
mat = zeros((n,n), dtype = int)
x = frutas.shape
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:18:32) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((n,n), dtype = int)
x = n.shape
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:19:14) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((x,x), dtype = int)

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:19:44) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((n,), dtype = int)

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:19:58) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((n,7), dtype = int)

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:20:06) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((1,7), dtype = int)

print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:20:15) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((1,7), dtype = int)

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:20:30) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((x,7), dtype = int)

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:20:58) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
x = n.shape
mat = zeros((4,7), dtype = int)

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:21:16) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))

mat = zeros((4,7), dtype = int)

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:21:40) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))

mat = zeros((1,4), dtype = int)

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:24:47) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n).[0]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

	



print(mat)
-- ERROR:
File "XXXX", line 8
    x = shape(n).[0]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:24:57) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n).[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

	



print(mat)
-- ERROR:
File "XXXX", line 8
    x = shape(n).[1]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:25:15) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(mat).[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

	



print(mat)
-- ERROR:
File "XXXX", line 8
    x = shape(mat).[1]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:25:29) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

	



print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:26:25) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:26:32) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:26:44) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:26:55) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:27:05) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:27:23) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:27:46) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:28:02) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


x = shape(n)[2]
total = 0 
for j in range(x):
	total = total + n[1,j]
print(total)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:29:00) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)


x = shape(n)[2]
v = 0 
for j in range(x):
	v = v + n[1,j]
print(v)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:29:29) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)
print(n)




x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:30:24) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)
print(n)




x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

y = n.shape






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:30:59) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)
print(n)




x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

y = n.shape
priny(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:31:03) 
-- CODE:
from numpy import*
from numpy.linalg import*


n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)
print(n)




x = shape(n)[1]
total = 0 
for j in range(x):
	total = total + n[0,j]
print(total)

y = n.shape
print(y)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:43:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

y = shape(n)[0]
total = zeros(y,dtype=int)
for i range y:
	total[i] = sum(n[i,:])
print(total)





-- ERROR:
File "XXXX", line 8
    for i range y:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:44:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

y = shape(n)[0]
total = zeros(y,dtype=int)
for i range(y):
	total[i] = sum(n[i,:])
print(total)





-- ERROR:
File "XXXX", line 8
    for i range(y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

y = shape(n)[0]
total = zeros(y,dtype=int)

for i range(y):
	total[i] = sum(n[i,:])
print(total)





-- ERROR:
File "XXXX", line 9
    for i range(y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 10:45:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
print(total)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 10:45:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n= array(eval(input("Digite uma matriz: ")))
mat = zeros((1,4), dtype = int)

y = shape(n)[0]
total = zeros(y,dtype=int)

for i in range(y):
	total[i] = sum(n[i,:])
print(total)





-- EXECUTION TIME:
1.22489
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
